force-app/main/default/objects/Jogador__c/Jogador__c.object-meta.xml
<CustomObject>
    <description>Jogador participante do jogo</description>
    <label>Jogador</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Número do Jogador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jogadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>