force-app/main/default/objects/Jogador__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Referente ao registro do candidato.</description>
    <inlineHelpText>Referente ao registro do candidato.</inlineHelpText>
    <label>Candidato</label>
    <referenceTo>Candidato__c</referenceTo>
    <relationshipLabel>Jogadores</relationshipLabel>
    <relationshipName>Jogadores</relationshipName>
    <type>Lookup</type>
</CustomField>