force-app/main/default/objects/Jogador__c/fields/Eliminado__c.field-meta.xml
<CustomField>
    <fullName>Eliminado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usado para informar se o jogador foi eliminado</description>
    <inlineHelpText>Jogador eliminado?</inlineHelpText>
    <label>Eliminado</label>
    <type>Checkbox</type>
</CustomField>