force-app/main/default/objects/Jogador__c/fields/Forca__c.field-meta.xml
<CustomField>
    <fullName>Forca__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Força</description>
    <label>Força</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>