force-app/main/default/objects/Jogador__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <description>Usado para exibir a mensagem de confirmação da eliminação dos jogadores ao clicar no botão Eliminar</description>
    <formula>&quot;Deseja eliminar os jogadores selecionados?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mensagem</label>
    <type>Text</type>
</CustomField>