force-app/main/default/objects/Jogador__c/fields/Morreu__c.field-meta.xml
<CustomField>
    <fullName>Morreu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que controla se o(a) SER HUMANO(A) MORREU</description>
    <inlineHelpText>Campo que controla se o(a) SER HUMANO(A) MORREU</inlineHelpText>
    <label>Morreu</label>
    <type>Checkbox</type>
</CustomField>