force-app/main/default/objects/Jogador__c/fields/Nick__c.field-meta.xml
<CustomField>
    <fullName>Nick__c</fullName>
    <description>Apelido do jogador</description>
    <inlineHelpText>Apelido do jogador</inlineHelpText>
    <label>Nick</label>
    <length>250</length>
    <type>Text</type>
</CustomField>