force-app/main/default/objects/Jogador__c/fields/QuantidadeAssassinatos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAssassinatos__c</fullName>
    <label>Quantidade de assassinatos</label>
    <summaryForeignKey>Assassinato__c.Assassino__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>