force-app/main/default/objects/Jogador__c/fields/ValorPagar__c.field-meta.xml
<CustomField>
    <fullName>ValorPagar__c</fullName>
    <description>Valor que cada jogador recebe quando o Round é suspenso</description>
    <inlineHelpText>Valor que cada jogador recebe quando o Round é suspenso</inlineHelpText>
    <label>Valor a pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>