force-app/main/default/objects/Jogador__c/fields/Velocidade__c.field-meta.xml
<CustomField>
    <fullName>Velocidade__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Velocidade</description>
    <label>Velocidade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>