force-app/main/default/objects/Jogador__c/listViews/JogadoresRemanescente.listView-meta.xml
<ListView>
    <fullName>JogadoresRemanescente</fullName>
    <columns>NAME</columns>
    <columns>Candidato__c</columns>
    <columns>Round__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eliminado__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Jogadores Remanescente</label>
</ListView>