force-app/main/default/objects/Jogador__c/listViews/JogadoresVivos.listView-meta.xml
<ListView>
    <fullName>JogadoresVivos</fullName>
    <columns>NAME</columns>
    <columns>Candidato__c</columns>
    <columns>Round__c</columns>
    <columns>Eliminado__c</columns>
    <columns>Morreu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Morreu__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Jogadores Vivos</label>
</ListView>