force-app/main/default/objects/Jogador__c/listViews/Membro.listView-meta.xml
<ListView>
    <fullName>Membro</fullName>
    <columns>NAME</columns>
    <columns>Candidato__c</columns>
    <columns>Eliminado__c</columns>
    <columns>Morreu__c</columns>
    <columns>DataMorte__c</columns>
    <columns>ValorPagar__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Jogador__c.JogadorPadrao</value>
    </filters>
    <label>Jogadores</label>
</ListView>