force-app/main/default/objects/Jogador__c/listViews/Membros.listView-meta.xml
<ListView>
    <fullName>Membros</fullName>
    <columns>NAME</columns>
    <columns>Candidato__c</columns>
    <columns>Eliminado__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Jogador__c.JogadorPadrao</value>
    </filters>
    <label>Jogadores Padrão</label>
</ListView>